# llms_and_depth

./: .gitignore  README.md  base_ppls.json  embed_data.py  main.py  plot.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.py
ShapleyInteraction4Structure/: README.md
configs/: gemma2-2b_gsm8k-main_drop_ppl_seed-123.json  gemma2-2b_gsm8k-main_grad_norm_seed-123.json  gemma2-2b_gsm8k-main_mean_grad_norm_seed-123.json  gemma2-2b_gsm8k-main_ww_alpha,input_output_cossim,batch_entropy_seed-123.json  gemma3-1b-it_gsm8k-main_drop_ppl_seed-123.json  gemma3-1b-it_gsm8k-main_grad_norm_seed-123.json  gemma3-1b-it_gsm8k-main_mean_grad_norm_seed-123.json  gemma3-1b-it_gsm8k-main_ww_alpha,input_output_cossim,batch_entropy_seed-123.json  gemma3-1b-pt_gsm8k-main_batch_entropy,input_output_cossim,ww_alpha_seed-123.json  gemma3-1b-pt_gsm8k-main_drop_ppl_seed-123.json  gemma3-1b-pt_gsm8k-main_grad_norm_seed-123.json  gemma3-1b-pt_gsm8k-main_input_output_cossim,batch_entropy_seed-123.json  gemma3-1b-pt_gsm8k-main_input_output_cossim,ww_alpha,batch_entropy_seed-123.json  gemma3-1b-pt_gsm8k-main_mean_grad_norm_seed-123.json  llama-1b_gsm8k-main_batch_entropy,input_output_cossim_seed-123.json  llama-1b_gsm8k-main_input_output_cossim,attn_rank,batch_entropy_seed-123.json  llama3.2-1b_gsm8k-main_drop_ppl_seed-123.json  llama3.2-1b_gsm8k-main_grad_norm_seed-123.json  llama3.2-1b_gsm8k-main_input_output_cossim,batch_entropy,ww_alpha_seed-123.json  llama3.2-1b_gsm8k-main_input_output_cossim,batch_entropy_seed-123.json  llama3.2-1b_gsm8k-main_mean_grad_norm_seed-123.json  tmp.txt  (+13 more)
(+95 files in other folders)
